--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Sticky</title>
+    <meta charset="UTF-8">
+    <title>Sticky</title>
+    <link rel="stylesheet" href="/src/scss/main.scss" />
+
 </head>
 <body>
-
+<script type="module" src="./src/ts/index.ts"></script>
 </body>
 </html>
