chore: setting project(ts-config, git)

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Sticky</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/src/scss/main.scss" />
 
 </head>
 <body>
+<div id="sticky_wrap"></div>
+<h1 id="h1"></h1>
 <script type="module" src="./src/ts/index.ts"></script>
 </body>
 </html>
