--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<div id="sticky_wrap"></div>
+<div id="stickWrap"></div>
 <h1 id="h1"></h1>
 <script type="module" src="./src/ts/index.ts"></script>
 </body>
