fix: fix tsconfig target version

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
 <div id="stickWrap"></div>
 <h1 id="h1"></h1>
-<script type="module" src="./src/ts/index.ts"></script>
+<script type="module" src="./src/ts/DOMRenderer.ts"></script>
 </body>
 </html>
