feat: add Folder model And Save Func

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+<button class='localSave'>LocalSave</button>
 <div id="stickWrap"></div>
 <h1 id="h1"></h1>
 <script type="module" src="./src/ts/index.ts"></script>
