--- a/index.html
+++ b/index.html
@@ -8,9 +8,31 @@
 
 </head>
 <body>
-<button class='localSave'>LocalSave</button>
-<div id="stickWrap"></div>
-<h1 id="h1"></h1>
+<main id='app'>
+    <nav id='menu' class='sidebar'>
+        <div class='folder-list'>
+            <ul>
+                <li>Folder1</li>
+                <li>Folder2</li>
+                <li>Folder3</li>
+                <li>Folder5</li>
+            </ul>
+            <div class='folder-control'>
+                <button class='add'>Add Folder</button>
+                <button class='load'>Load Folder</button>
+            </div>
+        </div>
+    </nav>
+    <section class='stickySection'>
+        <button class='sidebar-toggle'>
+            <i class="fa fa-list"></i>
+        </button>
+        <section  id="stickyContainer">
+
+        </section>
+    </section>
+</main>
+
 <script type="module" src="./src/ts/index.ts"></script>
 </body>
 </html>
