feat: list folders

--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
 <body>
 <main id='app'>
     <nav id='menu' class='sidebar'>
-        <div class='folder-list'>
-            <ul>
-                <li>Folder1</li>
-                <li>Folder2</li>
-                <li>Folder3</li>
-                <li>Folder5</li>
+        <div class='folder-Container'>
+            <ul class='folder-list'>
             </ul>
             <div class='folder-control'>
                 <button class='add'>Add Folder</button>
